docs: merge duplicate TIL documents into consolidated guides
- java: merge java-version-features + jdk-21-and-beyond → java-version-features.md
- java: merge 4 JVM docs → jvm-complete-guide.md
- DB: merge mysql-lock-types + mysql-lock-deep-dive → mysql-lock-deep-dive.md
- cache: merge cache-strategies + cache-patterns → cache-strategies-and-patterns.md
- spring: merge 6 Spring Batch docs → spring-batch-complete-guide.md